--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "vue-cli-service serve"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "firebase": "^7.10.0",
+    "stripe": "^8.38.0",
     "sweetalert2": "^9.10.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
